Update Java/Spring/Hibernate to new version